Grid cells can now "span" the full grid width
Eg. grid--cols-3 can hold a cell with a grid__cell--span-3 class on it. This grid cell will span the full width of the grid if cell wrapping is enabled.

--- a/assets/sass/04-base/structure/00-grid-base-styles.scss
+++ b/assets/sass/04-base/structure/00-grid-base-styles.scss
@@ -54,7 +54,7 @@
 
 //.grid__cell--span-# styling
 			@if ($i > 2){
-				@for $x from 2 through ($i - 1) {
+				@for $x from 2 through $i {
 					&--span-#{$x} { width: $columnWidth * $x; }
 				}
 			}
