--- a/assets/sass/05-modules/tooltip.scss
+++ b/assets/sass/05-modules/tooltip.scss
@@ -5,50 +5,145 @@
 //	Holds the styles for the css tooltip
 \*================================================*/
 
+$C-background: #000;
+$C-text: #fff;
 
-.tooltip { position: relative;
-	@include M-mq(min,bp('tablet')){
-		&:hover, &:focus {
-			.tooltip-text {
-				//can't use @extend, inside media query
+$V-icon-size: 10px;
+$V-transitionDuration: 0.3s;
+
+$module: 'tooltip';
+
+.#{$module} { position: relative;
+	&:hover, &:focus {
+		outline: none;
+		box-shadow: none;
+		.#{$module} {
+			&__text {
 				@include M-scale(1);
 				@include M-opacity(1);
+				visibility: visible;
+				$tooltipTransition--open:
+					(
+						attributes: transform opacity,
+						duration: $V-transitionDuration,
+					), (
+						attributes: visibility,
+						delay: 0s,
+						duration: 0s,
+					)
+				;
+				@include M-animate($tooltipTransition--open);
 			}
 		}
 	}
 
 	&__text {
+		$tooltipTransition:
+			(
+				attributes: transform opacity,
+				duration: $V-transitionDuration,
+			), (
+				attributes: visibility,
+				delay: $V-transitionDuration,
+				duration: 0s,
+			)
+		;
+		@include M-animate($tooltipTransition);
 		@include M-scale(0);
 		@include M-opacity(0);
 		@include M-origin(bottom center);
-		@include M-animate(0.2s);
 		position: absolute;
 		text-align: center;
-		bottom: 150%;
+		bottom: 100%;
+		margin-bottom: $V-icon-size;
 		left: 50%;
 		margin-left: -150px;
-		background: #000;
-		color: #fff;
+		background: $C-background;
+		color: $C-text;
 		width: 300px;
-		@include M-font-size(13);
+		@include M-font-size(13px);
 		padding: 10px;
 		z-index: 5;
+		line-height: 1;
+		visibility: hidden;
+
+		&--slim {
+			width: 100px;
+			margin-left: -50px;
+		}
 
 		@include M-before {
-			@extend %centered--h;
-			@include M-tri(down,#000,10px);
+			@include M-centered(h);
+			@include M-tri(down,$C-background,$V-icon-size);
 			top: 100%;
+		}
+		&--align {
+			&-bottom-center,
+			&-bottom-left,
+			&-bottom-right {
+				bottom: auto;
+				top: 100%;
+				margin-top: $V-icon-size + 5;
+				&:before {
+					@include M-tri(up,$C-background,$V-icon-size);
+					top: auto;
+					bottom: 100%;
+				}
+			}
+			&-bottom-center { @include M-origin(top center); }
+
+			&-bottom-right,
+			&-top-right {
+				left: auto;
+				right: 0;
+				margin-left: 0;
+				margin-right: -8px;
+				&:before {
+					@include M-tri(up,$C-background,$V-icon-size);
+					left: auto;
+					right: 10px;
+				}
+			}
+			&-bottom-right { @include M-origin(top right); }
 		}
 	}
 
-	&--bellow {
-		@include M-origin(top center);
-		bottom: auto;
-		top: 150%;
-		&:before {
-			@include M-tri(up,#000,10px);
-			top: auto;
-			bottom: 100%;
+	&--infoTip {
+		cursor: help;
+		background-color: $CG-baseLinkColor;
+		color: #fff;
+		padding: 0 5px;
+		display: inline-block;
+
+		.#{$module} {
+			&__text {
+				top: 100%;
+				bottom: auto;
+				margin: 0;
+				left: 0;
+				border: 2px solid $CG-baseLinkColor;
+				padding: 15px 20px;
+				background: #fff;
+				color: #000;
+				@include M-font-size(14px);
+				font-weight: $normal;
+				line-height: 1.5;
+				text-align: left;
+				@include M-origin(top left);
+				&:before {
+					display: none;
+				}
+			}
+		}
+	}
+}
+
+.tooltipSwap {
+	&__alternateText { display: none; }
+	&--swapped-JS {
+		.tooltipSwap {
+			&__alternateText { display: inline; }
+			&__defaultText { display: none; }
 		}
 	}
 }
