changed 3 column grid default change point to "mid"

--- a/assets/sass/00-config/grid-settings.scss
+++ b/assets/sass/00-config/grid-settings.scss
@@ -50,7 +50,7 @@ $gridBreakPoints: (
 		bp('mobile') 100%,//* At the "mobile" screen size, make the columns 100% width */
 	), (
 	//*3 column grid*/
-		bp('mobile') 100%,
+		bp('mid') 100%,
 	), (
 	//*4 column grid*/
 		bp('tablet') 50%,
