Removing unecessary SASS files

--- a/Swordion - DoC update/2015/assets/sass/04-base-SASS/form-elements-SASS/range.scss
+++ b/Swordion - DoC update/2015/assets/sass/04-base-SASS/form-elements-SASS/range.scss
@@ -1,5 +1,5 @@
 
-//set up invisible styles for custom range sliders in all browsers ready fro custom styles
+//set up invisible styles for custom range sliders in all browsers ready for custom styles
 
 input[type=range] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
