--- a/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/torch.scss
+++ b/website/assets/sass/05-modules-SASS/ZZ-SWORDION-ONLY/torch.scss
@@ -6,12 +6,12 @@
 	overflow: hidden;
 
 	&__light {
-		@include M-rGrad(#EBE300, transparent);
+		@include M-grad(#EBE300, transparent, 'r');
 		@include M-size(200px);
 		margin: -100px 0 0 -100px;
 	}
 	&__body {
-		@include M-rGrad(#363636 50%, #121212);
+		@include M-grad(#363636 50%, #121212, 'r');
 		text-align: center;
 		border-radius: 50%;
 	}
