Applied the advanced settings to one of the gradient demos

--- a/website/assets/sass/02-mixins-SASS/06-gradients.scss
+++ b/website/assets/sass/02-mixins-SASS/06-gradients.scss
@@ -47,6 +47,7 @@ $validStrings: map-keys($gradTypes);
 	$settings: ()
 ){
 
+//advanced default settings
 	$settings: defaultTo($settings, (
 		backup: default,
 		radial-range: closest-side,
